# flowsurface

./: Cargo.toml
data/: Cargo.toml
data/src/: aggr.rs  audio.rs  chart.rs  config.rs  layout.rs  lib.rs  log.rs  panel.rs  tickers_table.rs  util.rs
data/src/aggr/: ticks.rs  time.rs
data/src/chart/: comparison.rs  heatmap.rs  indicator.rs  kline.rs
data/src/config/: sidebar.rs  state.rs  theme.rs  timezone.rs
data/src/layout/: dashboard.rs  pane.rs
data/src/panel/: ladder.rs  timeandsales.rs
exchange/: Cargo.toml
exchange/src/: adapter.rs  connect.rs  depth.rs  fetcher.rs  lib.rs  limiter.rs  util.rs
exchange/src/adapter/: binance.rs  bybit.rs  hyperliquid.rs  okex.rs
scripts/: build-macos.sh  build-windows.sh  package-linux.sh
src/: audio.rs  chart.rs  layout.rs  logger.rs  main.rs  modal.rs  screen.rs  style.rs  widget.rs  window.rs
